// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Form 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form 2`] = `
{
  "body": {
    "a": "123",
  },
  "config": {
    "errorMessage": "saveFailed",
    "method": "post",
    "onFailed": [Function],
    "onSuccess": [Function],
    "successMessage": "saveSuccess",
  },
  "context": {
    "a": "123",
  },
  "data": {
    "a": "123",
  },
  "method": "post",
  "url": "/api/xxx",
}
`;

exports[`Renderer:Form initApi 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Spinner-overlay"
        />
        <div
          class="cxd-Spinner cxd-Spinner--overlay"
          data-testid="spinner"
        >
          <div
            class="cxd-Spinner-icon cxd-Spinner-icon--default"
          />
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  A
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="b"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  B
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form reset 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="name"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  姓名
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="name"
                placeholder=""
                size="10"
                type="text"
                value="username"
              />
            </div>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="email"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  邮箱
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="email"
                placeholder=""
                size="10"
                type="email"
                value="user_changed@baidu.com"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="reset"
        >
          <span>
            ResetButton
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            SubmitBtn
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form sendOn:true 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  A
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="b"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  B
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:onValidate 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal is-error"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  A
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control is-error cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
          <ul
            class="cxd-Form-feedback"
          >
            <li>
              a is wrong
            </li>
          </ul>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal is-error"
          data-amis-name="b"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  B
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control is-error cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
          <ul
            class="cxd-Form-feedback"
          >
            <li>
              b is wrong
            </li>
            <li>
              b is wrong 2
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:onValidate 2`] = `
{
  "a": 1,
  "b": 2,
}
`;

exports[`Renderer:Form:onValidate 3`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  A
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="b"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  B
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:onValidate 4`] = `
{
  "a": 1,
  "b": 2,
}
`;

exports[`Renderer:Form:remoteValidate 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal is-error"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control is-error cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
          <ul
            class="cxd-Form-feedback"
          >
            <li>
              这个字段服务端验证失败
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:valdiate 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal is-error is-required has-error--isRequired"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
              <span
                class="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control is-error has-error--isRequired cxd-TextControl is-focused"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
          <ul
            class="cxd-Form-feedback"
          >
            <li>
              这是必填项
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:valdiate 2`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal is-error is-required has-error--isRequired"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
              <span
                class="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control is-error has-error--isRequired cxd-TextControl is-focused"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
          <ul
            class="cxd-Form-feedback"
          >
            <li>
              这是必填项
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:valdiate 3`] = `
{
  "a": "123",
}
`;
